# notion-mcp

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/: server.py
